<resources>
    <string name="app_name">FoodMarket</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="login_now">Login Now</string>
    <string name="regist_now">Create New Account</string>
    <string name="next">Next</string>
    <string name="cntn">Continue</string>
    <string name="forget_password">Forget Password?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_profile">Profile</string>
</resources>